tests/negative/typecheck/annotation_not_ident.orng
fn main() -> Int {
    const My_Type = (.a: Int | .b: Int | .c: Int)
    4
}